--- a/client/src/css/Search.css
+++ b/client/src/css/Search.css
@@ -2,4 +2,15 @@
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
+    padding-left: 0;
+}
+
+.Search a {
+    color: inherit;
+    text-decoration: inherit;
+}
+
+.Search a:hover {
+    color: inherit;
+    text-decoration: inherit;
 }
