--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -5,7 +5,8 @@
     position: fixed;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    height: 2.5rem;
 }
 
 .Footer span {
