--- a/client/src/css/Movie.css
+++ b/client/src/css/Movie.css
@@ -29,12 +29,82 @@
 
 .white-content {
     position: fixed;
-    top: 12.5%;
-    left: 12.5%;
-    width: 75%;
-    height: 75%;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    height: 60%;
     padding: 16px;
     background-color: white;
     z-index: 1002;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
   }
+
+.Movie .white-content img {
+    width: 185px;
+    height: 264px;
+}
+
+.Movie .white-content .movie-info {
+    text-overflow: wrap;
+    overflow-y: auto;
+    padding: 1rem 4rem 0 1rem; 
+}
+
+.Movie .white-content .MovieForm {
+    text-overflow: wrap;
+    overflow-y: auto;
+    padding: 1rem 4rem 0 1rem;
+}
+
+.Movie .white-content .MovieForm input,
+.Movie .white-content .MovieForm select {
+    color: #116466 !important;
+    box-shadow: none !important;
+    user-select: none !important;
+    margin-bottom: 1rem;
+}
+
+.Movie .white-content .MovieForm .btn {
+    width: auto;
+}
+
+.Movie .white-content .MovieForm a {
+    color: #802BB1;
+}
+
+.Movie .white-content .MovieForm a:hover {
+    color: #116466;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.Movie .main-content {
+    display: flex;
+    flex-grow: 1;
+}
+
+.Movie .btn {
+    box-shadow: none !important;
+    height: 2.5rem;
+    margin-bottom: 2rem;
+}
+
+.Movie .quick-add {
+    width: 185px;
+}
+
+
+.Movie .quick-add {
+    background-color: #116466;
+    color: #66FCF1;
+    border-color: #116466;
+}
+
+.Movie .quick-add:hover {
+    border-color: #802BB1 !important;
+    background-color : #802BB1 !important;
+    color: #152833 !important;
+}
