--- a/client/src/css/Search.css
+++ b/client/src/css/Search.css
@@ -1,5 +1,6 @@
 .Search {
-    margin-bottom: 3rem;
+    margin-bottom: 2.5rem;
+    height: 100%;
 }
 
 .Search .search-results {
@@ -17,4 +18,28 @@
 .Search .preview:hover {
     color: inherit;
     text-decoration: inherit;
+}
+
+.Search .page {
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+}
+
+.Search .page .btn {
+    background-color: #116466;
+    border-color: #116466;
+    box-shadow: none !important;
+    user-select: none !important;
+}
+
+.Search i {
+    color: #66FCF1;
+}
+
+.Search .page .btn:hover {
+    border-color: #802BB1 !important;
+    background-color : #802BB1 !important;
+    color: #152833 !important;
+    box-shadow: none !important;
+    user-select: none !important;
 }
