--- a/client/src/css/Stats.css
+++ b/client/src/css/Stats.css
@@ -1,3 +1,28 @@
 .Stats {
     margin-bottom: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Stats .media-stats {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.Stats h1 {
+    margin-top: 2rem;
+}
+
+.Stats h1 span {
+    color: #802BB1;
+}
+
+.Stats .media-name {
+    margin-top: 2rem;
+}
+
+.Stats .list-title {
+    margin-top: 1rem;
 }
